--- a/coffeeMaker/templates/base.html
+++ b/coffeeMaker/templates/base.html
@@ -22,6 +22,8 @@
                 {% block content %}{% endblock %}
             </div>
             <div class="col-md-4">
+                <p><a class="btn btn-warning btn-block" href="{{url_for('service')}}" role="button">SERVICE</a></p>
+                <p><a class="btn btn-dark btn-block" href="{{url_for('home')}}" role="button">Suspend</a></p>
                 <div class="content-section">
                     <h3>Parameters:</h3>
                     <p class='text-muted'>
