--- a/coffeeMaker/templates/base.html
+++ b/coffeeMaker/templates/base.html
@@ -28,10 +28,11 @@
                     <h3>Parameters:</h3>
                     <p class='text-muted'>
                         <ul class="list-group list-gruop-flush">
-                            <li class="list-group-item">Milk</li>
-                            <li class="list-group-item">Water</li>
-                            <li class="list-group-item">Coffee Beans</li>
-                            <li class="list-group-item">Trash</li>
+                            <ul class="list-group list-gruop-flush">
+                                {% for tank in tanks %}
+                                <li class="list-group-item">{{tank.name}}: {{tank.current_amount}}/{{tank.capacity}}</li>
+                                {% endfor %}
+                            </ul>
                         </ul>
                     </p>
                 </div>
