--- a/coffeeMaker/templates/home.html
+++ b/coffeeMaker/templates/home.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-    <a class="btn btn-success btn-lg btn-block" href="{{url_for('main_panel')}}" role="button">Turn On</a>
+    <h1>Coffee Maker - best coffee.</h1>
 {% endblock content %}
