--- a/coffeeMaker/templates/base.html
+++ b/coffeeMaker/templates/base.html
@@ -31,9 +31,9 @@
                 {% block content %}{% endblock %}
             </div>
             <div class="col-md-4">
-                <p><a class="btn btn-success btn-block" href="{{url_for('main_panel')}}" role="button">Make Coffee</a></p>
-                <p><a class="btn btn-warning btn-block" href="{{url_for('service')}}" role="button">SERVICE</a></p>
-                <p><a class="btn btn-dark btn-block" href="{{url_for('home')}}" role="button">Suspend</a></p>
+                <p><a class="btn btn-success btn-block" href="{{url_for('main.main_panel')}}" role="button">Make Coffee</a></p>
+                <p><a class="btn btn-warning btn-block" href="{{url_for('main.service')}}" role="button">SERVICE</a></p>
+                <p><a class="btn btn-dark btn-block" href="{{url_for('main.home')}}" role="button">Suspend</a></p>
                 <div class="content-section">
                     <h3>Parameters:</h3>
                     <p class='text-muted'>
